[package]
name = "open-rusty"
version = "0.1.0"
authors = ["sahandevs <sahandevs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
rhai = { version = "0.19", features = ["no_float"]}
nginx = "0.10"